# hsamiplus

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  environment-dev.yml  environment-docs.yml  pyproject.toml  tox.ini  tox.toml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 0001-GENERIC-ISSUE-TEMPLATE.yml  0002-BUG-REPORT.yml  0003-FEATURE-REQUEST.yml  0004-QUESTION-SUPPORT.yml
.github/workflows/: auto-accept-ci-changes.yml  bump-version.yml  cache-cleaner.yml  codeql.yml  dependency-review.yml  first-pull-request.yml  label.yml  main.yml  publish-pypi.yml  scorecard.yml  tag-testpypi.yml  workflow-warning.yml
CI/: requirements_ci.in  requirements_ci.txt
data/: 5_ans.json  bassin_versant_info.txt  hsami_input.py  hsami_model_input.ipynb  hsami_model_output.ipynb  meteo_file.csv  meteo_file_5_ans.csv  parametres.txt
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  releasing.rst  usage.rst
docs/notebooks/: 5ans_sim_output.csv  exemple.ipynb  index.rst  spotpy_tests.ipynb
src/hsamiplus/: __init__.py  cli.py  hsami2.py  hsami2_noyau.py  hsami_ecoulement_horizontal.py  hsami_ecoulement_vertical.py  hsami_etp.py  hsami_glace.py  hsami_hydrogramme.py  hsami_input.py  hsami_interception.py  hsami_mhumide.py  hsami_ruissellement_surface.py  hsamibin.py
tests/: __init__.py  test_ecoulement_horizontal.py  test_ecoulement_vertical.py  test_etp.py  test_glace.py  test_hsami2.py  test_hsami2_noyau.py  test_hsami_input.py  test_hsamibin.py  test_hsamiplus.py  test_hydrogramme.py  test_interception.py  test_mhumide.py  test_ruissellement_surface.py
